# sber_test

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/app/: settings.py  urls.py
app/deposit_api/: apps.py  serializers.py  tests.py  views.py
